--- a/Product Managment System/style.css
+++ b/Product Managment System/style.css
@@ -60,6 +60,11 @@ button:hover {
   margin-top: 10px;
 }
 
+#search {
+  width: calc(100% - 10px);
+  margin-top: 10px;
+}
+
 .search button {
   flex: 1;
 }
