--- a/Product Managment System/style.css
+++ b/Product Managment System/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
 
+*{
+  padding: 0px;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: white;
@@ -57,11 +61,6 @@ button:hover {
 .search {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
-}
-
-#search {
-  width: calc(100% - 10px);
   margin-top: 10px;
 }
 
