--- a/Product Managment System/style.css
+++ b/Product Managment System/style.css
@@ -24,7 +24,7 @@ input {
   border: none;
   height: 40px;
   margin: 8px 5px;
-  /* padding: 10px 10px; */
+  padding: 0px 10px;
 }
 
 button {
@@ -56,6 +56,7 @@ button:hover {
 #create, #search, #deleteAll {
   width: calc(100% - 10px);
   margin-top: 8px;
+  padding: 0;
 }
 
 .search {
